--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,11 @@
     ],
     "react/react-in-jsx-scope": "off",
     "prettier/prettier": "error",
-    "react/jsx-one-expression-per-line": "off"
+    "react/jsx-one-expression-per-line": "off",
+    "react/prop-types": "off",
+    "react/jsx-props-no-spreading": "off",
+    "import/prefer-default-export": "off"
+
   },
   "settings": {
     "import/resolver": {
