--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,7 +52,8 @@
     "react/jsx-one-expression-per-line": "off",
     "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "react/no-array-index-key": "off"
 
   },
   "settings": {
