--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -53,8 +53,8 @@
     "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
     "import/prefer-default-export": "off",
-    "react/no-array-index-key": "off"
-
+    "react/no-array-index-key": "off",
+    "@typescript-eslint/ban-types": "off"
   },
   "settings": {
     "import/resolver": {
